GitVersion1/objects/Potential_Estimate_Form__c.object
<CustomObject>
    <fields>
        <fullName>Is_CFE_Incl_locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is CFE Incl % locked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Value_MT_CFE_locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Value MT/CFE locked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Function__c</fullName>
        <label>Product Function</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Species__c</fullName>
        <label>Species</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfCalculation__c</fullName>
        <label>TypeOfCalculation</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Business__c</fullName>
        <label>User Business</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inclusion_per_CFE__c</fullName>
        <label>% inclusion per CFE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Potential Estimate Form</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PotentialEstimateForm</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>